# Chess

./: CMakeLists.txt  README.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  die.h  engine.cpp  engine.h  errosion.cpp  errosion.h  evaluation.cpp  evaluation.h  hash.cpp  hash.h  main.cpp  movegen.cpp  movegen.h  output.h  perft.h  types.h  uci.cpp  uci.h
